--- a/template/index.html
+++ b/template/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="dark" lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,24 +56,24 @@
 					<div class="section">
 						<div class="name">Edukacja</div>
 						<div class="item">
-							<i>phone</i>
+							<div class="daterange">
+								<div>2019</div>
+								<div>2023</div>
+							</div>
 							<div>
-								<div class="value">+48 328 213 777</div>
-								<div class="desc">Nr telefonu</div>
+								<div class="value">Technik Matematyk</div>
+								<div class="desc">Kwalifikacje E68, E69 i X11</div>
+								<div class="desc">Zespół Szkół nr 69 im. Twojej Starej w Sosnowcu</div>
 							</div>
 						</div>
 						<div class="item">
-							<i>email</i>
-							<div>
-								<div class="value">noreply@ohv.lol</div>
-								<div class="desc">Adres e-mail</div>
+							<div class="daterange">
+								<div>2024</div>
 							</div>
-						</div>
-						<div class="item">
-							<i>language</i>
 							<div>
-								<div class="value">grube.baby</div>
-								<div class="desc">Strona internetowa</div>
+								<div class="value">Szkolenie BHP</div>
+								<div class="desc">Certyfikat XD z programowania na poziomie średniopodstawowym</div>
+								<div class="desc">Uniwersytet Twojej Starej w Lublinie</div>
 							</div>
 						</div>
 					</div>
@@ -81,32 +81,46 @@
 					<div class="section">
 						<div class="name">Doświadczenie</div>
 						<div class="item">
-							<i>phone</i>
+							<div class="daterange">
+								<div>2024</div>
+								<div>2025</div>
+							</div>
 							<div>
-								<div class="value">+48 328 213 777</div>
-								<div class="desc">Nr telefonu</div>
+								<div class="value">Jew-soft Szambo sp. z.o.o.</div>
+								<div class="desc">Praca przy wywozie nieczystości płynnych, obsługa sedesów i kierownik działu programistów</div>
 							</div>
 						</div>
 						<div class="item">
-							<i>email</i>
+							<div class="daterange">
+								<div>2023</div>
+							</div>
 							<div>
-								<div class="value">noreply@ohv.lol</div>
-								<div class="desc">Adres e-mail</div>
+								<div class="value">SM Lubartów</div>
+								<div class="desc">Starszy kosiarkowy i opiekun oddziału grabienia liści</div>
 							</div>
 						</div>
-						<div class="item">
-							<i>language</i>
-							<div>
-								<div class="value">grube.baby</div>
-								<div class="desc">Strona internetowa</div>
-							</div>
-						</div>
+					</div>
+
+					<div class="github">
+						<img src="img/github.svg">
+						<div class="a">github.com/dani3l0</div>
+						<div class="b">Mój profil na GitHubie</div>
 					</div>
 
 				</div>
 
 				<!-- Content -->
-				<div class="tb content"></div>
+				<div class="tb content">
+					<div class="section">
+						<div class="name">O mnie</div>
+						<div class="text">I'm a motivated Marketing Assistant with 2 years of e-commerce experience. I excel at social media and content creation, collaborating effectively to deliver engaging campaigns. I’m known for my proactive approach and strong organizational skills, reflecting our dedication to exceptional customer experiences. I’m eager to learn new digital marketing strategies and contribute to the company’s continued growth and success.</div>
+					</div>
+					<div class="section">
+						<div class="name">Umiejętności</div>
+						<div class="desc">Czyli czym konkretnie się zajmuję</div>
+					</div>
+					<div class="policy">Wyrażam zgodę na monitorowanie mnie i oddanie moich danych za pieniądze w ręce innego kapitału</div>
+				</div>
 
 			</div>
 
