--- a/template/index.html
+++ b/template/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="dark" lang="en">
+<html class="" lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,24 +11,18 @@
 	<div class="main dbg">
 		<div class="tb">
 
-
-			<!-- Header, whoami -->
-			<div class="lr top">
-				<i>account_circle</i>
-				<div class="full-name">
-					<div class="first-name">Maciej</div>
-					<div class="last-name">Solejuk</div>
-				</div>
-				<div class="specialization-summary">Hobbyist farmer, professional thief, reliable killer</div>
-			</div>
-
-
 			<div class="lr">
 
 				<!-- Sidebar -->
 				<div class="tb sidebar">
 
-					<div class="section">
+					<!-- Profile icon/picture -->
+					<div class="profile-pic">
+						<i>person</i>
+					</div>
+
+					<!-- Contact -->
+					<div class="section contact">
 						<div class="name">Kontakt</div>
 						<div class="item">
 							<i>phone</i>
@@ -53,47 +47,35 @@
 						</div>
 					</div>
 
+					<!-- Education -->
 					<div class="section">
 						<div class="name">Edukacja</div>
 						<div class="item">
-							<div class="daterange">
-								<div>2019</div>
-								<div>2023</div>
-							</div>
-							<div>
-								<div class="value">Technik Matematyk</div>
-								<div class="desc">Kwalifikacje E68, E69 i X11</div>
-								<div class="desc">Zespół Szkół nr 69 im. Twojej Starej w Sosnowcu</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="daterange">
-								<div>2024</div>
-							</div>
 							<div>
 								<div class="value">Szkolenie BHP</div>
 								<div class="desc">Certyfikat XD z programowania na poziomie średniopodstawowym</div>
 								<div class="desc">Uniwersytet Twojej Starej w Lublinie</div>
 							</div>
 						</div>
+						<div class="item">
+							<div>
+								<div class="value">Technik Matematyk</div>
+								<div class="desc">Kwalifikacje E68, E69 i X11</div>
+								<div class="desc">Zespół Szkół nr 69 im. Twojej Starej w Sosnowcu</div>
+							</div>
+						</div>
 					</div>
 
+					<!-- Experience -->
 					<div class="section">
 						<div class="name">Doświadczenie</div>
 						<div class="item">
-							<div class="daterange">
-								<div>2024</div>
-								<div>2025</div>
-							</div>
 							<div>
 								<div class="value">Jew-soft Szambo sp. z.o.o.</div>
 								<div class="desc">Praca przy wywozie nieczystości płynnych, obsługa sedesów i kierownik działu programistów</div>
 							</div>
 						</div>
 						<div class="item">
-							<div class="daterange">
-								<div>2023</div>
-							</div>
 							<div>
 								<div class="value">SM Lubartów</div>
 								<div class="desc">Starszy kosiarkowy i opiekun oddziału grabienia liści</div>
@@ -101,25 +83,38 @@
 						</div>
 					</div>
 
+					<!-- GitHub -->
 					<div class="github">
 						<img src="img/github.svg">
-						<div class="a">github.com/dani3l0</div>
-						<div class="b">Mój profil na GitHubie</div>
+						<div>
+							<div class="a">github.com/dani3l0</div>
+							<div class="b">Mój profil na GitHubie</div>
+						</div>
 					</div>
 
 				</div>
 
 				<!-- Content -->
 				<div class="tb content">
+
+					<div class="full-name">
+						<div class="first-name">Bogdan</div>
+						<div class="last-name">Cwelarczyk</div>
+					</div>
+
+					<div class="specialization-summary">Hobbyist farmer, professional thief, reliable killer</div>
+
 					<div class="section">
 						<div class="name">O mnie</div>
 						<div class="text">I'm a motivated Marketing Assistant with 2 years of e-commerce experience. I excel at social media and content creation, collaborating effectively to deliver engaging campaigns. I’m known for my proactive approach and strong organizational skills, reflecting our dedication to exceptional customer experiences. I’m eager to learn new digital marketing strategies and contribute to the company’s continued growth and success.</div>
 					</div>
+
 					<div class="section">
 						<div class="name">Umiejętności</div>
 						<div class="desc">Czyli czym konkretnie się zajmuję</div>
 					</div>
 					<div class="policy">Wyrażam zgodę na monitorowanie mnie i oddanie moich danych za pieniądze w ręce innego kapitału</div>
+
 				</div>
 
 			</div>
