Looks kinda better?

--- a/template/index.html
+++ b/template/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="" lang="en">
+<html class="darke" lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,9 +48,10 @@
 					</div>
 
 					<!-- Education -->
-					<div class="section">
+					<div class="section alt education">
 						<div class="name">Edukacja</div>
 						<div class="item">
+							<i>workspace_premium</i>
 							<div>
 								<div class="value">Szkolenie BHP</div>
 								<div class="desc">Certyfikat XD z programowania na poziomie średniopodstawowym</div>
@@ -58,6 +59,7 @@
 							</div>
 						</div>
 						<div class="item">
+							<i>school</i>
 							<div>
 								<div class="value">Technik Matematyk</div>
 								<div class="desc">Kwalifikacje E68, E69 i X11</div>
@@ -67,15 +69,17 @@
 					</div>
 
 					<!-- Experience -->
-					<div class="section">
+					<div class="section alt experience">
 						<div class="name">Doświadczenie</div>
 						<div class="item">
+							<i>manage_accounts</i>
 							<div>
 								<div class="value">Jew-soft Szambo sp. z.o.o.</div>
 								<div class="desc">Praca przy wywozie nieczystości płynnych, obsługa sedesów i kierownik działu programistów</div>
 							</div>
 						</div>
 						<div class="item">
+							<i>engineering</i>
 							<div>
 								<div class="value">SM Lubartów</div>
 								<div class="desc">Starszy kosiarkowy i opiekun oddziału grabienia liści</div>
