Sidebar is... decent

--- a/template/index.html
+++ b/template/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="darke" lang="en">
+<html class="" lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,17 +51,21 @@
 					<div class="section alt education">
 						<div class="name">Edukacja</div>
 						<div class="item">
-							<i>workspace_premium</i>
 							<div>
-								<div class="value">Szkolenie BHP</div>
+								<div class="value">
+									<i>license</i>
+									<div>Szkolenie BHP</div>
+								</div>
 								<div class="desc">Certyfikat XD z programowania na poziomie średniopodstawowym</div>
 								<div class="desc">Uniwersytet Twojej Starej w Lublinie</div>
 							</div>
 						</div>
 						<div class="item">
-							<i>school</i>
 							<div>
-								<div class="value">Technik Matematyk</div>
+								<div class="value">
+									<i>school</i>
+									<div>Technik Matematyk</div>
+								</div>
 								<div class="desc">Kwalifikacje E68, E69 i X11</div>
 								<div class="desc">Zespół Szkół nr 69 im. Twojej Starej w Sosnowcu</div>
 							</div>
@@ -72,16 +76,20 @@
 					<div class="section alt experience">
 						<div class="name">Doświadczenie</div>
 						<div class="item">
-							<i>manage_accounts</i>
 							<div>
-								<div class="value">Jew-soft Szambo sp. z.o.o.</div>
+								<div class="value">
+									<i>business_center</i>
+									<div>Jew-soft Szambo sp. z.o.o.</div>
+								</div>
 								<div class="desc">Praca przy wywozie nieczystości płynnych, obsługa sedesów i kierownik działu programistów</div>
 							</div>
 						</div>
 						<div class="item">
-							<i>engineering</i>
 							<div>
-								<div class="value">SM Lubartów</div>
+								<div class="value">
+									<i>work</i>
+									<div>SM Lubartów</div>
+								</div>
 								<div class="desc">Starszy kosiarkowy i opiekun oddziału grabienia liści</div>
 							</div>
 						</div>
@@ -89,11 +97,11 @@
 
 					<!-- GitHub -->
 					<div class="github">
-						<img src="img/github.svg">
 						<div>
 							<div class="a">github.com/dani3l0</div>
 							<div class="b">Mój profil na GitHubie</div>
 						</div>
+						<img src="img/github.svg">
 					</div>
 
 				</div>
