--- a/template/index.html
+++ b/template/index.html
@@ -152,7 +152,7 @@
 						<div class="name">Umiejętności</div>
 						<div class="desc">I’m Gemma, a language model! I help generate text, answer questions, and chat. I love learning new things and exploring language!</div>
 						<div class="skills">
-							<div>
+							<div class="b1" style="--color: 0">
 								<div class="title">
 									<i>handyman</i>
 									<div>Narzędzia</div>
@@ -167,7 +167,7 @@
 									<div>systemd</div>
 								</div>
 							</div>
-							<div>
+							<div class="b2" style="--color: 120">
 								<div class="title">
 									<i>handyman</i>
 									<div>Narzędzia</div>
@@ -182,7 +182,7 @@
 									<div>systemd</div>
 								</div>
 							</div>
-							<div>
+							<div class="b3" style="--color: 210">
 								<div class="title">
 									<i>handyman</i>
 									<div>Narzędzia</div>
@@ -197,7 +197,7 @@
 									<div>systemd</div>
 								</div>
 							</div>
-							<div>
+							<div style="--color: 40">
 								<div class="title">
 									<i>handyman</i>
 									<div>Narzędzia</div>
