Drop personality grid

--- a/template/index.html
+++ b/template/index.html
@@ -118,39 +118,12 @@
 
 					<div class="section">
 						<div class="name">O mnie</div>
-						<div class="text">I'm a motivated Marketing Assistant with 2 years of e-commerce experience. I excel at social media and content creation, collaborating effectively to deliver engaging campaigns. I’m known for my proactive approach and strong organizational skills, reflecting our dedication to exceptional customer experiences. I’m eager to learn new digital marketing strategies and contribute to the company’s continued growth and success.</div>
-						<div class="personality-grid">
-							<div>
-								<i>mood</i>
-								<div class="value">Happy</div>
-								<div class="desc">Likes music</div>
-							</div>
-							<div>
-								<i>mood</i>
-								<div class="value">Happy</div>
-								<div class="desc">Likes music</div>
-							</div>
-							<div>
-								<i>mood</i>
-								<div class="value">Happy</div>
-								<div class="desc">Likes music</div>
-							</div>
-							<div>
-								<i>mood</i>
-								<div class="value">Happy</div>
-								<div class="desc">Likes music</div>
-							</div>
-							<div>
-								<i>mood</i>
-								<div class="value">Happy</div>
-								<div class="desc">Likes music</div>
-							</div>
-						</div>
+						<div class="text">I'm a motivated Marketing Assistant with 2 years of e-commerce experience. I excel at social media and content creation, collaborating effectively to deliver engaging campaigns. I'm known for my proactive approach and strong organizational skills, reflecting our dedication to exceptional customer experiences. I'm eager to learn new digital marketing strategies and contribute to the company's continued growth and success.</div>
 					</div>
 
 					<div class="section">
 						<div class="name">Umiejętności</div>
-						<div class="desc">I’m Gemma, a language model! I help generate text, answer questions, and chat. I love learning new things and exploring language!</div>
+						<div class="desc">I'm Gemma, a language model! I help generate text, answer questions, and chat. I love learning new things and exploring language!</div>
 						<div class="skills">
 							<div class="b1" style="--color: 0">
 								<div class="title">
@@ -158,7 +131,7 @@
 									<div>Narzędzia</div>
 								</div>
 								<div class="text">
-									<div>I’m Gemma, a language model! I can write stories, poems, and summaries. I enjoy crafting creative text!</div>
+									<div>I'm Gemma, a language model! I can write stories, poems, and summaries. I enjoy crafting creative text!</div>
 								</div>
 								<div class="bubbles">
 									<div>docker</div>
@@ -173,7 +146,7 @@
 									<div>Narzędzia</div>
 								</div>
 								<div class="text">
-									<div>I’m Gemma, a language model! I can write stories, poems, and summaries. I enjoy crafting creative text!</div>
+									<div>I'm Gemma, a language model! I can write stories, poems, and summaries. I enjoy crafting creative text!</div>
 								</div>
 								<div class="bubbles">
 									<div>docker</div>
@@ -188,7 +161,7 @@
 									<div>Narzędzia</div>
 								</div>
 								<div class="text">
-									<div>I’m Gemma, a language model! I can write stories, poems, and summaries. I enjoy crafting creative text!</div>
+									<div>I'm Gemma, a language model! I can write stories, poems, and summaries. I enjoy crafting creative text!</div>
 								</div>
 								<div class="bubbles">
 									<div>docker</div>
@@ -203,7 +176,7 @@
 									<div>Narzędzia</div>
 								</div>
 								<div class="text">
-									<div>I’m Gemma, a language model! I can write stories, poems, and summaries. I enjoy crafting creative text!</div>
+									<div>I'm Gemma, a language model! I can write stories, poems, and summaries. I enjoy crafting creative text!</div>
 								</div>
 								<div class="bubbles">
 									<div>docker</div>
