--- a/template/index.html
+++ b/template/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style/icons.css" />
 	<link rel="stylesheet" href="style/main.css">
 	<title>Primary</title>
 </head>
 <body>
+	<div class="background"></div>
 	<div class="main dbg">
 		<div class="tb">
 
