--- a/template/index.html
+++ b/template/index.html
@@ -134,55 +134,54 @@
 									<div>I'm Gemma, a language model! I can write stories, poems, and summaries. I enjoy crafting creative text!</div>
 								</div>
 								<div class="bubbles">
-									<div>docker</div>
-									<div>podman</div>
-									<div>compose</div>
-									<div>systemd</div>
+									<div>młotek</div>
+									<div>śrubokręt</div>
+									<div>łom</div>
 								</div>
 							</div>
 							<div class="b2" style="--color: 120">
 								<div class="title">
-									<i>handyman</i>
-									<div>Narzędzia</div>
+									<i>engineering</i>
+									<div>Sprzęt</div>
 								</div>
 								<div class="text">
 									<div>I'm Gemma, a language model! I can write stories, poems, and summaries. I enjoy crafting creative text!</div>
 								</div>
 								<div class="bubbles">
-									<div>docker</div>
-									<div>podman</div>
-									<div>compose</div>
-									<div>systemd</div>
+									<div>procesor</div>
+									<div>grafika</div>
+									<div>wiatraki</div>
+									<div>ciekły azot</div>
 								</div>
 							</div>
 							<div class="b3" style="--color: 210">
 								<div class="title">
-									<i>handyman</i>
-									<div>Narzędzia</div>
+									<i>terminal</i>
+									<div>Administracja</div>
 								</div>
 								<div class="text">
 									<div>I'm Gemma, a language model! I can write stories, poems, and summaries. I enjoy crafting creative text!</div>
 								</div>
 								<div class="bubbles">
-									<div>docker</div>
-									<div>podman</div>
-									<div>compose</div>
-									<div>systemd</div>
+									<div>linxu</div>
+									<div>symbian</div>
+									<div>generic</div>
+									<div>iOS</div>
 								</div>
 							</div>
-							<div style="--color: 40">
+							<div class="b4" style="--color: 40">
 								<div class="title">
-									<i>handyman</i>
-									<div>Narzędzia</div>
+									<i>wifi</i>
+									<div>Sieci</div>
 								</div>
 								<div class="text">
 									<div>I'm Gemma, a language model! I can write stories, poems, and summaries. I enjoy crafting creative text!</div>
 								</div>
 								<div class="bubbles">
-									<div>docker</div>
-									<div>podman</div>
-									<div>compose</div>
-									<div>systemd</div>
+									<div>NAT</div>
+									<div>ping</div>
+									<div>pong</div>
+									<div>fajne domeny</div>
 								</div>
 							</div>
 						</div>
