--- a/template/index.html
+++ b/template/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<div class="background"></div>
+
 	<div class="main dbg">
 		<div class="tb">
 
@@ -41,8 +42,8 @@
 						<div class="item">
 							<i>language</i>
 							<div>
-								<div class="value">grube.baby</div>
-								<div class="desc">Strona internetowa</div>
+								<div class="value">15.ohv.lol</div>
+								<div class="desc">Moja strona internetowa</div>
 							</div>
 						</div>
 					</div>
