--- a/template/index.html
+++ b/template/index.html
@@ -124,7 +124,7 @@
 
 					<div class="section">
 						<div class="name">Umiejętności</div>
-						<div class="desc">I'm Gemma, a language model! I help generate text, answer questions, and chat. I love learning new things and exploring language!</div>
+						<div class="desc">I'm Gemma, a language model! I help gema, a language model! I help generate text, answer questions, and chat. I love learning new things and exploring language!</div>
 						<div class="skills">
 							<div class="b1" style="--color: 0">
 								<div class="title">
@@ -146,7 +146,7 @@
 									<div>Sprzęt</div>
 								</div>
 								<div class="text">
-									<div>I'm Gemma, a language model! I can write stories, poems, and summaries. I enjoy crafting creative text!</div>
+									<div>I'm Gemma, a language model! I can write stories, poemuage model! I can write stories, poemuage model! I can write stories, poemuage model! I can write stories, poems, and summaries. I enjoy crafting creative text!</div>
 								</div>
 								<div class="bubbles">
 									<div>procesor</div>
