is template finishd?

--- a/template/index.html
+++ b/template/index.html
@@ -46,6 +46,13 @@
 								<div class="desc">Moja strona internetowa</div>
 							</div>
 						</div>
+						<div class="item github">
+							<img src="img/github.svg">
+							<div>
+								<div class="value">github.com/dani3l0</div>
+								<div class="desc">Mój profil na GitHubie</div>
+							</div>
+						</div>
 					</div>
 
 					<!-- Education -->
@@ -94,15 +101,6 @@
 								<div class="desc">Starszy kosiarkowy i opiekun oddziału grabienia liści</div>
 							</div>
 						</div>
-					</div>
-
-					<!-- GitHub -->
-					<div class="github">
-						<div>
-							<div class="a">github.com/dani3l0</div>
-							<div class="b">Mój profil na GitHubie</div>
-						</div>
-						<img src="img/github.svg">
 					</div>
 
 				</div>
@@ -183,6 +181,27 @@
 									<div>ping</div>
 									<div>pong</div>
 									<div>fajne domeny</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="section">
+						<div class="name">Osiągnięcia</div>
+						<div class="text">I'm known for my proactive approach and strong organizational skills, reflecting our dedication to exceptional customer experiences. I'm eager to learn new digital marketing strategies and contribute to the company's continued growth and success.</div>
+						<div class="competition">
+							<div class="gold">
+								<i>trophy</i>
+								<div>
+									<div class="title">CyberSkiller</div>
+									<div class="desc">1. miejsce w województwie lubelskim w drugim i trzecim etapie konkursu tematyki cyberbezpieczeństwa CyberSkiller w 2023 roku</div>
+								</div>
+							</div>
+							<div class="silver">
+								<i>trophy</i>
+								<div>
+									<div class="title">153+1 CTF</div>
+									<div class="desc">2. miejsce w województwie lubelskim zajęte w konkursie tematyki cyberbezpieczeństwa 153+1 CTF w 2022 roku</div>
 								</div>
 							</div>
 						</div>
