--- a/template/style/main.css
+++ b/template/style/main.css
@@ -8,7 +8,7 @@
 }
 body, html {
 	background: #FFF;
-	color: #444;
+	color: #222;
 	margin: 0 auto;
 	padding: 0;
 	min-width: 210mm;
@@ -18,6 +18,7 @@ body, html {
 	font-size: 3.25mm;
 	font-weight: 500;
 	font-family: "Manrope";
+	overflow: hidden;
 }
 body {
 	background: url(../img/background.svg) repeat;
@@ -25,10 +26,10 @@ body {
 }
 .background {
 	position: fixed;
-	top: -5%;
-	left: -15%;
-	width: 150%;
-	height: 150%;
+	left: 0;
+	bottom: 0;
+	width: calc(100% + 72mm);
+	height: calc(100% + 12mm);
 	border-radius: 0 25cm 0 0;
 	background: #FFF;
 	box-shadow: 2mm -2mm 4mm #0001;
@@ -73,7 +74,7 @@ body {
 	width: calc(100% + 2mm);
 	height: 50%;
 	z-index: -1;
-	background: #F99;
+	background: #F99D;
 	border-radius: 3mm 1cm 3mm 1cm;
 }
 
@@ -102,21 +103,23 @@ body {
 	border-left: none;
 	overflow: hidden;
 	margin: 3mm 0 3mm -4mm;
-	padding: 1mm 2mm 0 4mm;
+	padding: 1mm 2mm 0 5mm;
 }
 .sidebar .section .item {
 	display: flex;
-	margin: 3mm 0;
+	align-items: center;
+	margin: 3.5mm 0;
 }
 .sidebar .section .item > i {
 	border-radius: 10cm;
-	color: #422;
+	color: #633;
 	padding-right: 4mm;
 }
 .sidebar .section .item .value {
 	font-weight: bold;
 	display: flex;
 	align-items: center;
+	z-index: 2;
 }
 .sidebar .section .item .value > i {
 	font-size: 4mm;
@@ -131,32 +134,20 @@ body {
 	font-family: "Lekton";
 	font-size: 3.5mm;
 }
-.sidebar .github {
-	margin-top: 12mm;
-	display: flex;
-	opacity: .75;
-	align-items: center;
-	text-align: right;
-	margin-left: auto;
-	font-weight: bold;
-	font-size: 3.75mm;
-}
-.sidebar .github .b {
-	font-weight: bold;
-	opacity: .5;
-	font-size: 3mm;
-}
 .sidebar .github img {
-	width: 8mm;
-	height: 8mm;
-	margin-left: 2mm;
-	opacity: .3;
+	width: 7mm;
+	height: 6mm;
+	object-fit: fill;
+	border-radius: 1cm;
+	margin-right: 4mm;
+	margin-left: -.25mm;
 }
 
 /* Right */
 .content {
 	z-index: 1;
 	padding: 4mm;
+	margin-right: 2mm;
 }
 .content .full-name {
 	margin: 10mm 0 2mm;
@@ -181,7 +172,7 @@ body {
 	flex-wrap: wrap;
 	border-radius: 8mm;
 	overflow: hidden;
-	margin: 4mm 0;
+	margin: 3mm 0 1mm;
 }
 .skills > div {
 	flex: 1;
@@ -227,9 +218,9 @@ body {
 	margin-right: 2mm;
 	color: hsl(var(--color), 100%, 20%);
 	font-size: 24mm;
-	opacity: .15;
+	opacity: .2;
 	height: 8mm;
-	z-index: 1;
+	z-index: -1;
 	top: -7mm;
 	left: -7mm;
 }
@@ -252,7 +243,7 @@ body {
 	padding: 1mm 1.5mm;
 	background: hsl(var(--color), 100%, 80%);
 	display: inline-block;
-	margin: 0 .2mm;
+	margin: 0 .25mm;
 	font-weight: bold;
 	color: #000B;
 	border-radius: .5mm;
@@ -263,18 +254,85 @@ body {
 .skills .bubbles div:last-child {
 	margin-right: 0;
 }
+.competition {
+	display: flex;
+	flex: 1;
+	align-items: center;
+	flex-wrap: wrap;
+	margin-top: 4mm;
+}
+.competition > div {
+	display: flex;
+	align-self: flex-start;
+	margin: .5mm;
+	border-radius: 2mm;
+	padding: 2mm;
+	overflow: hidden;
+	border: 1mm solid hsl(var(--color), 100%, 95%);
+	background: linear-gradient(-90deg, hsl(var(--color), 100%, 95%), hsl(var(--color), 100%, 98%));
+}
+.competition > div:first-child {
+	border-top-left-radius: 8mm;
+	border-top-right-radius: 8mm;
+}
+.competition > div:last-child {
+	border-bottom-left-radius: 8mm;
+	border-bottom-right-radius: 8mm;
+}
+.competition i {
+	font-size: 12mm;
+	position: relative;
+	margin-right: 2mm;
+	color: hsl(var(--color), 100%, 45%);
+}
+.competition .title {
+	font-family: "Geo";
+	font-size: 4mm;
+	letter-spacing: .1mm;
+	font-weight: bold;
+}
+.competition .desc {
+	font-size: 2.5mm;
+}
+.competition .gold {
+	--color: 50;
+}
+.competition .silver i {
+	opacity: .5;
+}
+.competition i::after {
+	position: absolute;
+	left: 50%;
+	top: 3.25mm;
+	transform: translateX(-50%);
+	font-family: monospace;
+	font-size: 3mm;
+	text-align: center;
+	font-weight: bold;
+}
+.competition .silver {
+	--color: 0;
+	filter: grayscale(1);
+}
+.competition .gold i::after {
+	content: "1";
+}
+.competition .silver i::after {
+	content: "2";
+}
 .policy {
 	display: flex;
 	align-items: center;
-	font-size: 3.25mm;
+	font-size: 2.25mm;
 	font-weight: bold;
 	opacity: .333;
 	position: absolute;
-	top: 285mm;
+	bottom: 0;
 	left: 50%;
+	max-width: 15cm;
 	transform: translate(-50%, -100%);
 }
 .policy i {
-	font-size: 6.5mm;
-	margin-right: 2mm;
+	font-size: 5mm;
+	margin-right: 1mm;
 }
